# EventStoreDB-Client-Haskell-Experimental

./: .gitignore  CHANGELOG.md  Setup.hs  esdb-hs.cabal
esdb_rs/: Cargo.toml
esdb_rs/src/: lib.rs
src/: Main.hs  MyLib.hs
