cabal-version:      2.4
name:               esdb-hs
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:

-- The package author(s).
-- author:

-- An email address to which users can send suggestions, bug reports, and patches.
-- maintainer:

-- A copyright notice.
-- copyright:
-- category:
build-type: Custom
extra-source-files: CHANGELOG.md

custom-setup
    setup-depends: base ^>=4.14.3.0,
                   Cabal == 3.6.*,
                   directory == 1.3.*

library
    exposed-modules:  MyLib

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0
    hs-source-dirs:   src
    default-language: Haskell2010
    other-extensions: ForeignFunctionInterface
    extra-libraries: rusty_esdb

executable testing
    main-is: src/Main.hs
    hs-source-dirs: .
    default-language: Haskell2010
    build-depends:    base ^>=4.14.3.0,
                      esdb-hs