[package]
name = "esdb_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rusty_esdb"
crate-type = ['staticlib']

[dependencies]
libc = "0.2"
eventstore = { git = "https://github.com/YoEight/EventStoreDB-Client-Rust-Experimental.git", branch = "facilited-ffi" }
tokio = { version = "1", default-features = false, features = ["rt-multi-thread"] }
